2019-10-04  Charlie Zender  <zender@uci.edu>

	* Implement centroid method for polygonal decomposition into triangles

	* Case-insensitive matching for map-file attributes

2019-10-03  Charlie Zender  <zender@uci.edu>

	* Ensure non-ESMF map-files perform same re-normalization as ESMF "destonly" map-files

	* Rewrite nco_rgr_wgt(), nco_grd_nfr(), nco_grd_mk() metadata code with new function nco_char_att_get()

	* Implement applicable required and suggested metadata in map-file as per CMIP6 Specifications for Regridding Weights

	* Rewrite map-file metadata code with new function nco_char_att_get()

2019-10-02  Charlie Zender  <zender@uci.edu>

	* Replace all nco_inq_att_flg calls in regridder with cleaner nco_char_att_get()

	* Rewrite map-file ID code using new function nco_char_att_get()

	* Add ncremap --vrt_nm option to specify vertical coordinate input/output name for pure pressure grids

	* Output interpolated to pure pressure grid defaults to same vertical coordinate name as input

	* Massive merge of Henry's improved map algorithms

2019-10-01  Charlie Zender  <zender@uci.edu>

	* Prevent plev_nm_in definition in output file when plev_nm_in != lev_nm_out

	* Update ANNOUNCE, document ilev_nm, lev_nm, and plev_nm in nco.texi

	* Deprecate ALM from ncremap/ncclimo options

2019-09-30  Charlie Zender  <zender@uci.edu>

	* NCO 4.8.2-alpha08 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.8.2-alpha08: Svadhyaya';git push
	git tag -a 4.8.2-alpha08 -m 'MacOS 10.14.6 xcode 11 macports 2.6.0 gcc 9.2 issues;ncremap sgs back-compatability, vrt prs tm_nbr fix ilev fix;nco.texi rgr';git push --tags

	* Account for vertical layers in clever interface pressure memory allocation, then deprecate it as too clever

	* Prevent taking double logarithm if input and output interface pressures

	* Change default vertical interpolation back from linear to logarithmic

	* Add vrt_ntp, vrt_xtr synonyms to ncks

2019-09-29  Charlie Zender  <zender@uci.edu>
